# goit-algo2-hw-10

./: README.md  class_schedule_generator.py  pyproject.toml  quick_sort.py
